<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/normal_padding">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAF8F8"
            tools:context=".SegundaActividad">


            <TextView
                android:id="@+id/filtros_1_cabecera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/filtros_titulo_fecha"
                android:textColor="#070404"
                android:textSize="@dimen/fecha_factura_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cabecera" />

            <TextView
                android:id="@+id/cabecera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabeceraFiltros"
                android:textColor="#000000"
                android:textSize="@dimen/tamño_cabecera"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botonCerrarFiltro" />

            <ImageView
                android:id="@+id/botonCerrarFiltro"
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.956"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/botonCerrar" />

            <TextView
                android:id="@+id/valorSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/importe_factura"
                android:textColor="@color/verde_proyecto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cabeceraImporte" />

            <SeekBar
                android:id="@+id/sliderImporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/verde_proyecto"
                android:max="100"
                android:min="0"
                android:thumbTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valorSlider"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/fechaDesde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/light_gray"
                android:gravity="center_horizontal|center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/dia_mes_año"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/desde"
                app:layout_constraintTop_toBottomOf="@+id/desde" />

            <TextView
                android:id="@+id/desde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="8dp"
                android:text="@string/desde"
                android:textSize="@dimen/estado_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filtros_1_cabecera" />

            <TextView
                android:id="@+id/fechaHasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/light_gray"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/dia_mes_año"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/fechaDesde"
                app:layout_constraintStart_toStartOf="@+id/hasta"
                app:layout_constraintTop_toBottomOf="@+id/hasta" />

            <TextView
                android:id="@+id/hasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:text="@string/hasta"
                android:textSize="@dimen/estado_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toEndOf="@+id/desde"
                app:layout_constraintTop_toBottomOf="@+id/filtros_1_cabecera" />

            <TextView
                android:id="@+id/separador_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/normal_padding"
                android:background="@drawable/factura_border_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fechaDesde" />

            <TextView
                android:id="@+id/separador_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/normal_padding"
                android:background="@drawable/factura_border_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sliderImporte" />

            <TextView
                android:id="@+id/cabeceraImporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/filtros_titulo_importe"
                android:textColor="@color/black"
                android:textSize="@dimen/fecha_factura_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separador_1" />

            <TextView
                android:id="@+id/min_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/min_seekbar"
                android:textColor="@color/verde_proyecto"
                app:layout_constraintBottom_toTopOf="@+id/sliderImporte"
                app:layout_constraintEnd_toStartOf="@+id/sliderImporte"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cabeceraImporte"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/max_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textColor="@color/verde_proyecto"
                app:layout_constraintBottom_toTopOf="@+id/sliderImporte"
                app:layout_constraintEnd_toEndOf="@+id/sliderImporte"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/min_seekbar"
                app:layout_constraintTop_toBottomOf="@+id/valorSlider" />

            <TextView
                android:id="@+id/cabeceraEstado"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginTop="16dp"
                android:text="@string/filtros_titulo_estados"
                android:textColor="@color/black"
                android:textSize="@dimen/estado_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/idOpcion1"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/separador_2"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <CheckBox
                android:id="@+id/idOpcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/opcion1"
                app:layout_constraintBottom_toTopOf="@+id/idOpcion2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cabeceraEstado" />

            <CheckBox
                android:id="@+id/idOpcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/opcion2"
                app:layout_constraintBottom_toTopOf="@+id/idOpcion3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idOpcion1" />

            <CheckBox
                android:id="@+id/idOpcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/opcion3"
                app:layout_constraintBottom_toTopOf="@+id/idOpcion4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idOpcion2" />

            <CheckBox
                android:id="@+id/idOpcion4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="232dp"
                android:minHeight="48dp"
                android:text="@string/opcion4"
                app:layout_constraintBottom_toTopOf="@+id/idOpcion5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idOpcion3" />

            <CheckBox
                android:id="@+id/idOpcion5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/opcion5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idOpcion4" />

            <Button
                android:id="@+id/botonFiltrar"
                android:layout_width="185dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:padding="10dp"
                android:paddingStart="@dimen/estado_text_size"
                android:text="@string/botonFiltrar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idOpcion5"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/botonEliminarFiltros"
                android:layout_width="185dp"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button_no_background"
                android:text="@string/botonCerrarFiltros"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botonFiltrar"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>